--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "miner-game",
   "version": "0.1.0",
+  "homepage": "http://DevsHorse.github.io/minesweeper",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
